charts/all/distributed-tracing/templates/namespace-distributed-tracing.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: distributed-tracing
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/part-of: platform-hub-spoke
