charts/all/distributed-tracing/templates/networkpolicy-tempo-otel-collector-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tempo-otel-collector-ingress
  namespace: distributed-tracing
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: distributor
      app.kubernetes.io/instance: simplest
      app.kubernetes.io/managed-by: tempo-operator
      app.kubernetes.io/name: tempo
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-opentelemetry
      ports:
        - port: 4317
          protocol: TCP
        - port: 4318
          protocol: TCP
